exports[`Text Text component 1`] = `
<span
  style={
    Object {
      "color": undefined,
      "fontSize": "1rem"
    }
  }>
  Howdy!
</span>
`;

exports[`Text Text w/ Color 1`] = `
<span
  style={
    Object {
      "color": "#329ced",
      "fontSize": "1rem"
    }
  }>
  Howdy! (In Color)
</span>
`;

exports[`Text Text w/ Size 1`] = `
<span
  style={
    Object {
      "color": undefined,
      "fontSize": "2rem"
    }
  }>
  Big Howdy!
</span>
`;
